[package]
name = "moq-transfork"
description = "Media over QUIC"
authors = ["Luke Curley"]
repository = "https://github.com/kixelated/moq-rs"
license = "MIT OR Apache-2.0"

version = "0.10.0"
edition = "2021"

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

[dependencies]
bytes = "1"
thiserror = "2"
tracing = "0.1"

rand = { version = "0.9.0", optional = true }
fastrand = { version = "2.3.0", optional = true }

tokio = { version = "1.43", features = [
	"macros",
	"io-util",
	"sync",
	"test-util",
] }

web-transport = { workspace = true }
futures = "0.3"

num_enum = "0.7"

moq-async = { path = "../moq-async", version = "0.1" }
qlog-rs = { path = "../../qlog-rs", version = "0.5", features = ["moq-transfork"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.9.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
fastrand = "2.3.0"
